--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,10 +1,12 @@
 <ul reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
+  
+  {% set cls = cycler("left", "right") %}
 
   {% for post in postslist | reverse %}
 
-    <li class="article_preview_wrapper postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
+    <li class="article_preview_wrapper postlist-item">
       
-      <article id="" class="article article_preview animate_in" itemscope itemprop="blogPost">
+      <article id="" class="article article_preview animate_in {{ cls.next() }}" itemscope itemprop="blogPost">
 
         <div class="copy cut_paste">
 
