--- a/index.njk
+++ b/index.njk
@@ -48,7 +48,7 @@ eleventyNavigation:
 		</div>
 
 		{% set postslist = collections.posts %}
-		{% set postslistCounter = collections.posts | length %}
+		{% set postslistCounter = "3" %}
 		{% include "postslist.njk" %}
 
 		<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
