--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -144,6 +144,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.min.js" integrity="sha256-vMplzCSo+pO4wcmz/as8FVtabF5gE9Gwqk5ER8jux3w=" crossorigin="anonymous"></script>
     
   <!-- Local Scripts -->
+    <script src="{{ '/js/analytics.js' | url }}"></script>
     <script src="{{ '/js/script.js' | url }}"></script>
 
 </html>
