--- a/index.njk
+++ b/index.njk
@@ -43,7 +43,7 @@ eleventyNavigation:
 
 	<div class="article_preview_feed">
 		<div class="header">
-			<h2>Recent Articles</h2>
+			<h2>Latest Articles</h2>
 		</div>
 
 
