--- a/css/kvlt-framework.css
+++ b/css/kvlt-framework.css
@@ -60,8 +60,64 @@ GENERAL
     ::-webkit-scrollbar-thumb:hover {
        -webkit-box-shadow: inset 0 0 50px var(--white);
     }
+  
+
+  /***** Global *****/
+
+    html, body{
+      padding:0;
+      margin:0;
+      box-sizing:border-box;
+      font-family: 'Spectral', serif;
+      background-color:var(--grey-3);
+      color:var(--white);
+      font-size:1.6rem;
+
+    }
+
+    html {
+      /*scroll-behavior: smooth;*/
+    }
+
+    body{
+      overflow-x:hidden;
+      height:100%;
+
+    }
+
+    ::selection {
+      background: rgba(251,51,51,.85); /* WebKit/Blink Browsers */
+      mix-blend-mode: multiply;
+    }
+    ::-moz-selection {
+      background: rgba(251,51,51,.85); /* Gecko Browsers */
+      mix-blend-mode: multiply;
+    }
+
+    .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
 
 
+
+    a{
+      cursor: pointer;
+    }
+
+    img{
+      max-width:100%;
+    }
+
+
+
+
+/********************************************
+
+HEADER/FOOTER/NAV 
+
+********************************************/
 
 
   /***** Header *****/
@@ -324,6 +380,29 @@ GENERAL
     #main>*:first-child{
       padding-top: 100px;
     }
+
+
+
+  /***** Container sizes *****/
+    
+    .container{
+      width:100%;
+      max-width:1440px;
+      box-sizing:border-box;
+      padding: 15px 35px;
+      margin:auto;
+      
+    }
+    .container.large{
+      max-width: 1640px;
+    }
+    .container.medium{
+      max-width: 1440px;
+    }
+    .container.small{
+      max-width: 1024px;
+    }
+
     
 
 
@@ -356,7 +435,7 @@ ELEMENTS
       justify-content: center;
       align-items: center;
       position: relative;
-      flex-direction: row-reverse;
+      flex-direction: row;
     }
     .article_preview:after {
       content: '';
@@ -370,13 +449,7 @@ ELEMENTS
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-    }
-
-    .article_preview.left{
-      flex-direction: row;
-    }
-
-    
+    }    
 
     .article_preview>div{
       box-sizing:border-box;
@@ -400,19 +473,7 @@ ELEMENTS
         transform:none;
         transition:.5s;
       }
-      .article_preview.left>.image>a>img{
-        transform-origin:right;
-        perspective-origin:left;
-        transform:none;
-        transition:.5s;
-        will-change: transform, filter, box-shadow;
-      }
-      .article_preview.left>.image:hover>a>img{
-        filter: grayscale(1);
-        transform: translateX( -100px ) translateY( 5px ) translateZ(50px) rotateX( -15deg ) rotateY( -25deg ) scale(.75);
-        box-shadow:5px -5px 15px 15px rgba(255,255,255,0.25);
-        perspective:800px;
-      }
+      
       .article_preview>.image:hover>a>img{
         filter: grayscale(1);
         transform: translateX( -100px ) translateY( 5px ) translateZ(50px) rotateX( 15deg ) rotateY( -25deg ) scale(.75);
@@ -425,9 +486,7 @@ ELEMENTS
       .article_preview>div.image{
         padding-right:15px;
       }
-      .article_preview.left>div.image{
-        padding-left:15px;
-      }
+      
 
       .article_preview>.image>.image_credit{
         display: block;
@@ -448,112 +507,128 @@ ELEMENTS
         z-index: 12;
         box-sizing: border-box;
       }
-      .article_preview.left>div.copy{
-        padding-right:50px;
-      }
+      
       .article_preview>div.copy{
         padding-left:50px;
       }
-      .article_preview>.copy .title{
-        font-family: 'OldEnglish', cursive;
-        font-size: 5.5rem;
-        line-height: 4.5rem;
-        padding: 25px 35px;
-        display: inline-block;
-        font-weight: 300;
-        text-decoration:none;
-        position: relative;
-        z-index: 15;
-        background: var(--white);
-        box-sizing: border-box;
-        transition: .25s;
 
-        transition-timing-function: ease-in-out;
-        will-change: text-shadow;
-      }
+      /***** Title ****/
+        .article_preview>.copy .title{
+          font-family: 'OldEnglish', cursive;
+          font-size: 5.5rem;
+          line-height: 4.5rem;
+          padding: 25px 35px;
+          display: inline-block;
+          font-weight: 300;
+          text-decoration:none;
+          position: relative;
+          z-index: 15;
+          background: var(--white);
+          box-sizing: border-box;
+          transition: .25s;
 
-      .article_preview>.copy.cut_paste .title{
-        box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
-        margin-bottom: 0;
-        top: 10px;
-        left: -15px;
-        transform: rotate(4deg);
-      }
-
-      .article_preview>.copy .title a{
-        transition: .25s ease-in-out;
-      }
-      .article_preview>.copy .title a:hover{
-        text-shadow: var(--text-glow-red);
-        
-      }
-      .article_preview>.copy .title>h3{
-        margin: 0;
-        font-family: 'OldEnglish', cursive;
-        font-size: 5rem;
-        line-height: 4.5rem;
-        font-weight: 300;
-
-      }
-      .article_preview>.copy .snippet{
-        font-size:1.8rem;
-        line-height: 2.4rem;
-        padding: 25px 25px 25px 25px;
-        box-sizing: border-box;
-        z-index: 14;
-        background var(--white)
-      }
-      .article_preview>.copy .snippet p:first-letter{
-        font-family: 'OldEnglish', cursive;
-        font-size: 4.5rem;
-        line-height: 1.8rem;
-        letter-spacing: .3rem;
-        float:left;
-
-      }
-      .article_preview>.copy .snippet p{
-        margin-bottom: 25px;
-      }
-
-      .article_preview>.copy .snippet .read_more{
-        font-family: 'OldEnglish', cursive;
-        font-size: 3.6rem;
-        line-height: 3.6rem;
-        display: inline-block;
-        text-decoration: none;
-        transition: .25s;
-        transition-timing-function: ease-in-out;
-        will-change: text-shadow;
-      }
-      .article_preview>.copy .snippet .read_more:hover{
-        text-shadow: var(--text-glow-red);
-        
-      }
-
-
-
-    /***** Special Classes *****/
-      
-      /***** Left *****/
-        .article_preview.left>div.copy.cut_paste .title{
-          transform: rotate(-3deg);
-          top:10px;
+          transition-timing-function: ease-in-out;
+          will-change: text-shadow;
         }
-        .article_preview.left>div.copy.cut_paste .title>h3{
+
+        .article_preview>.copy.cut_paste .title{
+          box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
+          margin-bottom: 0;
+          top: 10px;
+          left: -15px;
+          transform: rotate(4deg);
+        }
+        .article_preview>.copy .title a{
+          transition: .25s ease-in-out;
+        }
+        .article_preview>.copy .title a:hover{
+          text-shadow: var(--text-glow-red);
+          
+        }
+        .article_preview>.copy .title>h3{
+          margin: 0;
+          font-family: 'OldEnglish', cursive;
+          font-size: 5rem;
+          line-height: 4.5rem;
+          font-weight: 300;
           transform: rotate(2deg);
         }
-        .article_preview.right>div.copy.cut_paste .snippet{
-          padding-right:35px;
-        }
-        .article_preview.left>div.copy.cut_paste .snippet{
+      
+      /***** Body ****/
+        .article_preview>.copy .snippet{
+          font-size:1.8rem;
+          line-height: 2.4rem;
+          padding: 25px;
+          box-sizing: border-box;
+          z-index: 14;
+          background: var(--white);
           padding-left:35px;
           transform: rotate(1deg);
         }
-          
-      
-      /***** Right *****/      
-        .article_preview.left>div.copy.cut_paste .snippet>p{
+        .article_preview>.copy .snippet p:first-letter{
+          font-family: 'OldEnglish', cursive;
+          font-size: 4.5rem;
+          line-height: 1.8rem;
+          letter-spacing: .3rem;
+          float:left;
+        }
+        .article_preview>.copy .snippet p{
+          margin-bottom: 25px;
           transform: rotate(-3deg);
+        }
+
+        .article_preview>.copy .snippet .read_more{
+          font-family: 'OldEnglish', cursive;
+          font-size: 3.6rem;
+          line-height: 3.6rem;
+          display: inline-block;
+          text-decoration: none;
+          transition: .25s;
+          transition-timing-function: ease-in-out;
+          will-change: text-shadow;
+        }
+        .article_preview>.copy .snippet .read_more:hover{
+          text-shadow: var(--text-glow-red);
+          
+        }
+
+
+
+    /***** Alt Classes *****/         
+      
+      /***** .alt_1 - reverse, different angles *****/     
+        .article_preview.alt_1{
+          flex-direction: row-reverse;
+        } 
+        .article_preview.alt_1:after {
+          transform: translateX(-50%) rotate(180deg);
+        } 
+        .article_preview.alt_1>div.copy {
+            padding-right: 50px;
+            padding-left: 0;
+        }
+        .article_preview.alt_1>.copy.cut_paste .title{
+          transform: rotate(-3deg);
+        }
+        .article_preview.alt_1>div.copy.cut_paste .snippet{
+          padding-right:35px;
+        }
+        
+        .article_preview.alt_1>.image>a>img{
+          transform-origin:right;
+          perspective-origin:left;
+          transform:none;
+          transition:.5s;
+          will-change: transform, filter, box-shadow;
+        }
+        .article_preview.alt_1>div.image{
+          padding-left:15px;
+        }
+        .article_preview.alt_1>.image:hover>a>img{
+          filter: grayscale(1);
+          transform: translateX( -100px ) translateY( 5px ) translateZ(50px) rotateX( -15deg ) rotateY( -25deg ) scale(.75);
+          box-shadow:5px -5px 15px 15px rgba(255,255,255,0.25);
+          perspective:800px;
         }
 
 
