--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ PAGES
       }
       
       .home_1>.container>.main .caption{
-        font-size: 2.8rem;
-        font-family: var(--serif);
+        font-size: 2.4rem;
+        font-family: var(--mono);
         width: 100%;
         max-width: 950px;
       }
