--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
+    <link rel="shortcut icon" href="/img/favicon.png" />
+
+    <!-- INTERNAL CSS -->
     <link rel="stylesheet" href="{{ '/css/variables.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/boilerplate.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/kvlt-framework.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/responsive.css' | url }}">
 
-    <!-- INVOCATION OF CSS -->
+    <!-- EXTERNAL CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css" />
@@ -30,6 +33,8 @@
 
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
+
+
   </head>
   <body>
 
@@ -108,7 +113,6 @@
                   <div class="social">
                     <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-codepen"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
