--- a/archive.njk
+++ b/archive.njk
@@ -6,7 +6,13 @@ eleventyNavigation:
   order: 2
 ---
 
-<h1>Archive</h1>
 
-{% set postslist = collections.posts %}
-{% include "postslist.njk" %}
+<section class="container">
+	<h1>Archive</h1>
+</section>
+
+<section class="container">
+	{% set postslist = collections.posts %}
+	{% include "postslist.njk" %}
+</section>
+
