--- a/styleguide.njk
+++ b/styleguide.njk
@@ -9,6 +9,60 @@ eleventyNavigation:
 
 <article>
 	
-	
+	<div class="grid_template_1">
+
+		<!-- Header -->
+		<div class="grid_cell cell_1">
+			<div class="grid_cell_inner">
+		
+				<section class="article_hero container" style="background-image: url('/img/articles/morbid/evil-dead-1.jpg');">
+					<!-- markdown space -->
+					<div class="copy">
+						<h1 class="title">
+							<span class="column_name">Tales From The Basement:</span>
+							<br>
+							<span class="main">Morbid</span>
+						</h1>
+					</div>
+					<!-- markdown space -->
+					<!-- markdown space -->
+					<span class="image_credit">
+						CREDIT: The Evil Dead, 1981
+					</span>
+				</section>
+
+			</div>
+		</div>
+
+		<!-- Sidebar Left -->
+		<div class="grid_cell cell_2">
+			<div class="grid_cell_inner">
+				<p>Sidebar Left</p>
+			</div>
+		</div>
+
+		<!-- Main -->
+		<div class="grid_cell cell_3">
+			<div class="grid_cell_inner">
+				<p>Main</p>
+			</div>
+		</div>
+
+		<!-- Sidebar Right -->
+		<div class="grid_cell cell_4">
+			<div class="grid_cell_inner">
+				<p>Sidebar Right</p>
+			</div>
+		</div>
+
+		<!-- Footer -->
+		<div class="grid_cell cell_5">
+			<div class="grid_cell_inner">
+				<p>Footer</p>
+			</div>
+		</div>
+
+
+	</div>
 	
 </article>
