--- a/_includes/sidebar_1.njk
+++ b/_includes/sidebar_1.njk
@@ -5,14 +5,14 @@
 			<!--<h3>newsletter</h3>
 			<input type="text" name="email" placeholder="email">
 			<button type="submit" form="newsletter_form">Join Us</button>-->
-			<a class="button_1" href="#" >newsletter</a>
+			<a class="button_1 modal_open" data-modal="newsletter_modal" >newsletter</a>
 		</form>
 	</div>
 
 	<div class="sidebar_cell sponsor" >
 		<h3>sponsors</h3>
 		<a href="https://judasbeastco.com" target="_blank">
-		<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
+			<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
 		</a>
 	</div>
 
