--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,12 +1,13 @@
 <ul reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
   
   {% set cls = cycler("", "alt_1") %}
+  {{ set id_count = 0 }}
 
   {% for post in postslist | reverse %}
 
     <li class="article_preview_wrapper postlist-item">
-      
-      <article id="" class="article article_preview animate_in {{ cls.next() }}" itemscope itemprop="blogPost">
+      {% id_count++ %}
+      <article id="animate_{{ id_count | safe }}" class="article article_preview animate_in {{ cls.next() }}" itemscope itemprop="blogPost">
 
         <div class="image">
           <a href="{{ post.url | url }}#more">
