--- a/_includes/newsletter_modal.njk
+++ b/_includes/newsletter_modal.njk
@@ -4,10 +4,10 @@
 	</div>
 	
 	<div class="copy">
-		<p class="headline">NEWSLETTER MODAL</p>
+		<p class="headline">Newsletter</p>
 		<p class="body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris varius iaculis mauris, in lacinia purus congue porta. Nulla a semper mi, ac vehicula elit. Donec lacinia justo vitae libero viverra aliquet. Nam vitae semper ligula. Praesent volutpat purus et lectus elementum molestie.</p>
 	</div>
-	<div class="cta">
-		<a class=".button_1">CTA</a>
+	<div class="cta_wrapper">
+		<a class="button_1">Confirm</a>
 	</div>
 </div>
