--- a/index.njk
+++ b/index.njk
@@ -14,9 +14,9 @@ eleventyNavigation:
 					<h1>The <span>Past</span> is <span>Alive</span></h1>
 				</div>
 				<div class="caption">
-					<p class="cut_out">Necro Cult is an effort to recreate the look and feel of 80s and 90s underground metal zines, in the tradition, and in tribute of Slayer Mag, Helvete, and countless other fanzines created throughout the decades.  We aim not just to showcase the art, culture, and news of the metal underground, but to have the reader’s experience be a work of art as well.  </p>
+					<p class="cut_out">Necro Cult is an effort to recreate the look and feel of 80s and 90s underground metal zines, in the tradition, and in tribute of Slayer Mag, Helvete, and countless other fanzines created throughout the decades.  We aim not just to showcase the art, culture, and news of the metal underground, but to have the reading experience reflect the grime and grittiness of underground metal. </p>
 					<br><br>
-					<p class="cut_out">Brothers of Steel!  Death to False Metal!</p>
+					<p class="cut_out">Hail Satan!  Brothers of Steel!  Death to False Metal!</p>
 				</div>
 			</div>
 
