--- a/_includes/featured_slider.njk
+++ b/_includes/featured_slider.njk
@@ -1,5 +1,5 @@
 
-  
+<div class="swiper-container" data-slider="featured_slider_1">
   <div class="swiper-wrapper">
     
     {% for post in postslist | reverse %}      
@@ -29,5 +29,5 @@
 
   <div class="swiper-pagination"></div>
 
-
+</div>
   
