--- a/_includes/sidebar_1.njk
+++ b/_includes/sidebar_1.njk
@@ -1,19 +1,34 @@
 <div class="sticky_sidebar">
 	
 	<div class="sidebar_cell form">
-		<form id="newsletter_form">
-			<!--<h3>newsletter</h3>
-			<input type="text" name="email" placeholder="email">
-			<button type="submit" form="newsletter_form">Join Us</button>-->
-			<a class="button_1 modal_open" data-modal="newsletter_modal" >newsletter</a>
-		</form>
+		<a class="button_1 modal_open" data-modal="newsletter_modal" >newsletter</a>
 	</div>
 
 	<div class="sidebar_cell sponsor" >
 		<h3>sponsors</h3>
-		<a href="https://judasbeastco.com" target="_blank">
-			<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
-		</a>
-	</div>
+
+		<!-- Swiper -->
+		  <div class="swiper-container" data-slider="sidebar_slider_1">
+		    <div class="swiper-wrapper">
+		     
+		      <div class="swiper-slide">
+		      	<a href="https://judasbeastco.com/?utm_source=necrocult" target="_blank">
+		      		<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
+		      	</a>
+		      </div>
+
+			<div class="swiper-slide">
+				<a href="https://judasbeastco.com/" target="_blank">
+					<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
+				</a>
+			</div>
+
+		    </div>
+		    <!-- Add Pagination -->
+		    <div class="swiper-pagination"></div>
+		  </div>
+
+		
+	</div> 
 
 </div>
